# Delta

./: .gitignore  .gitmodules  .vulkan.env  CMakeLists.txt  CMakePresets.json  CompileShaders.bat  Delta.sln  Makefile  README.md
Delta/: Delta.vcxproj  Delta.vcxproj.filters
Delta/Source/: stdafx.h
Delta/Source/Private/: Actor.cpp  ActorComponent.cpp  Asset.cpp  AssetManager.cpp  Camera.cpp  DeltaActor.cpp  DeltaComponent.cpp  DeltaEngine.cpp  DeltaLog.cpp  DeltaMath.cpp  DeltaObject.cpp  DeltaTransform.cpp  Engine.cpp  IDeltaRenderable.cpp  IDeltaTransformable.cpp  IRenderable.cpp  ITransformable.cpp  Input.cpp  Log.cpp  Material.cpp  MetalBridge.mm  Object.cpp  Pipeline.cpp  Player.cpp  Renderer.cpp  Scene.cpp  StaticMesh.cpp  StaticMeshComponent.cpp  Texture.cpp  Transform.cpp  VulkanCore.cpp  Window.cpp  main.cpp
Delta/Source/Public/: Actor.h  ActorComponent.h  Asset.h  AssetManager.h  Camera.h  DeltaActor.h  DeltaComponent.h  DeltaEngine.h  DeltaLog.h  DeltaMath.h  DeltaObject.h  DeltaTransform.h  DeltaTypes.h  Engine.h  IDeltaRenderable.h  IDeltaTransformable.h  IRenderable.h  ITransformable.h  Input.h  Log.h  Material.h  MeshData.h  Object.h  Pipeline.h  Player.h  Renderer.h  StaticMesh.h  StaticMeshComponent.h  Texture.h  TextureData.h  Transform.h  VulkanCore.h  Window.h
Delta/Source/Shaders/: triangle.frag  triangle.vert
Source/Private/: AssetManager.cpp  DeltaLog.cpp  Engine.cpp  IRenderable.cpp  Material.cpp  Object.cpp  Pipeline.cpp  Player.cpp  Renderer.cpp  StaticMesh.cpp  StaticMeshComponent.cpp  Texture.cpp  VulkanCore.cpp  Window.cpp  main.cpp
Source/Public/: ActorComponent.h  AssetManager.h  Camera.h  DeltaLog.h  DeltaMath.h  DeltaTypes.h  Engine.h  Input.h  MeshData.h  Object.h  Pipeline.h  Player.h  Renderer.h  Scene.h  Texture.h  VulkanCore.h
Source/Shaders/: triangle.frag  triangle.vert
scripts/: build_deps.sh  build_deps_windows.bat  compile_shaders.sh  compile_shaders_windows.bat  detect_vulkan.sh
